adding meta data to the head

--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-<head>
+<head prefix="og: http://ogp.me/ns#">
+
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
-    <title>Web Speech API Demo</title>
-    <meta name="title" content='Web Speech API Demo'>
-    <meta name="robots" content='index,follow'>
-    <meta name="description" content='Demo of what the web speech api can do for websites.'>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+
+    <title>Voice Assistant Demo - Web Speech API</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="canonical" href="https://svignara.github.io/voice-assistant/">
+    <link rel="alternate" href="https://svignara.github.io/voice-assistant/" hreflang="en" />
+
+    <!-- common social tags -->
+
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://svignara.github.io/assets/img/social-card-image.jpg">
+    <meta property="og:site_name" content="Suvi's House">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:image" content="https://svignara.github.io/assets/img/social-card-image.jpg">
+    <meta name="twitter:site" content="@suvi_v">
+    <meta name="twitter:creator" content="@suvi_v">
+
+    <!-- document-specific social tags -->
+
+    <meta property="og:title" content="Voice Assistant Demo - Web Speech API">
+    <meta property="og:url" content="https://svignara.github.io/voice-assistant/">
+    <meta name="twitter:url" content="https://svignara.github.io/voice-assistant/">
+    <meta name="twitter:title" content="Voice Assistant Demo - Web Speech API">
+
+    <meta property="og:description" content="This is a demonstration of how the SpeechRecognition and SpeechSynthesis interfaces of the Web Speech API can be used to create a voice assistant for a website.">
+    <meta name="description" content="This is a demonstration of how the SpeechRecognition and SpeechSynthesis interfaces of the Web Speech API can be used to create a voice assistant for a website.">
+    <meta name="twitter:description" content="This is a demonstration of how the SpeechRecognition and SpeechSynthesis interfaces of the Web Speech API can be used to create a voice assistant for a website.">
+
 </head>
 
 <body>
@@ -64,7 +89,7 @@
         </style>
         <div class="centered">
             <h1>Web Speech API Demo</h1>
-            <p><em>(Only supported on Chrome for desktop and mobile, and MAYBE on Firefox for mobile)</em></p>
+            <p><em>Source code: <a href="https://github.com/svignara/voice-assistant">https://github.com/svignara/voice-assistant</a></em></p>
         </div>
         <div id="assistant-ui" class="assistant-ui-container">
             <div class="centered">
